[package]
name = "rust_pyaq"
version = "0.1.0"
authors = ["Yuji Ichikawa <ichikawa.yuji@gmail.com>"]

[dependencies]
getopts = "*"
rand = "*"
itertools = "*"
lazy_static = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "*"
serde = "*"
serde_derive = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sgf = "*"
tensorflow = { version = "*", features = ["tensorflow_unstable"] }

[lib]
name = "rust_pyaq_lib"

[[bin]]
name = "rust_pyaq"
path = "src/main.rs"

[[example]]
name = "rust_pyaq_wasm"
path = "src/lib.rs"
crate-type = ["cdylib"]
