[package]
name = "rust_pyaq"
version = "0.1.0"
authors = ["Yuji Ichikawa <ichikawa.yuji@gmail.com>"]

[dependencies]
getopts = "*"
rand = "*"
itertools = "*"
lazy_static = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sgf = "*"
tensorflow = { version = "*", features = ["tensorflow_unstable"] }

[[bin]]
name = "rsaq"
path = "src/main.rs"
